@@ -665,24 +665,6 @@ const char *ptexbanner = BANNER;
 /* forward declaration */
 static string
 normalize_quotes (const_string name, const_string mesg);
-#ifndef TeX
-int srcspecialsp = 0;
-#endif
-/* Support of 8.3-name convention. If *buffer == NULL, nothing is done. */
-static void change_to_long_name (char **buffer)
-{
-  if (*buffer) {
-    char inbuf[260];
-    char outbuf[260];
-
-    memset (outbuf, 0, 260);
-    strcpy (inbuf, *buffer);
-    if (GetLongPathName (inbuf, outbuf, 260)) {
-      *buffer = (char *)realloc(*buffer, strlen(outbuf) + 1);
-      strcpy (*buffer, outbuf);
-    }
-  }
-}
 #endif /* WIN32 */
 
 /* The entry point: set up for reading the command line, which will
@@ -804,17 +786,11 @@ maininit (int ac, string *av)
             *pp = '/';
         }
       }
-#ifdef XeTeX
       name = normalize_quotes(argv[argc-1], "argument");
+#ifdef XeTeX
       main_input_file = kpse_find_file(argv[argc-1], INPUT_FORMAT, false);
-      if (!srcspecialsp) {
-        change_to_long_name (&main_input_file);
-        if (main_input_file)
-          name = normalize_quotes(main_input_file, "argument");
-      }
       argv[argc-1] = name;
 #else
-      name = normalize_quotes(argv[argc-1], "argument");
       quoted = (name[0] == '"');
       if (quoted) {
         /* Overwrite last quote and skip first quote. */
@@ -822,16 +798,10 @@ maininit (int ac, string *av)
         name++;
       }
       main_input_file = kpse_find_file(name, INPUT_FORMAT, false);
-      if (!srcspecialsp)
-        change_to_long_name (&main_input_file);
       if (quoted) {
         /* Undo modifications */
         name[strlen(name)] = '"';
         name--;
-      }
-      if (!srcspecialsp) {
-        if (main_input_file)
-          name = normalize_quotes(main_input_file, "argument");
       }
       argv[argc-1] = name;
 #endif
@@ -1572,14 +1542,9 @@ get_input_file_name (void)
       }
     }
 #endif
-
     name = normalize_quotes(argv[optind], "argument");
 #ifdef XeTeX
     input_file_name = kpse_find_file(argv[optind], INPUT_FORMAT, false);
-#ifdef WIN32
-    if (!srcspecialsp)
-      change_to_long_name (&input_file_name);
-#endif
 #else
     quoted = (name[0] == '"');
     if (quoted) {
@@ -1588,20 +1553,10 @@ get_input_file_name (void)
         name++;
     }
     input_file_name = kpse_find_file(name, INPUT_FORMAT, false);
-#ifdef WIN32
-    if (!srcspecialsp)
-      change_to_long_name (&input_file_name);
-#endif
     if (quoted) {
         /* Undo modifications */
         name[strlen(name)] = '"';
         name--;
-    }
-#endif
-#ifdef WIN32
-    if (!srcspecialsp) {
-      if (input_file_name)
-        name = normalize_quotes (input_file_name, "argument");
     }
 #endif
     argv[optind] = name;
